syntax = "proto3";
option go_package = "github.com/penumbra-zone/penumbra/proto/go-proto";

package penumbra.core.governance.v1alpha1;

import "google/protobuf/any.proto";
import "penumbra/core/crypto/v1alpha1/crypto.proto";

message ProposalSubmit {
  // The proposal to be submitted.
  governance.v1alpha1.Proposal proposal = 1;
  // The amount of the proposal deposit.
  crypto.v1alpha1.Amount deposit_amount = 3;
}

message ProposalWithdraw {
  // The proposal to be withdrawn.
  uint64 proposal = 1;
  // The reason for the proposal being withdrawn.
  string reason = 2;
}

message ValidatorVote {
  // The effecting data for the vote.
  ValidatorVoteBody body = 1;
  // The vote authorization signature is authorizing data.
  crypto.v1alpha1.SpendAuthSignature auth_sig = 2;
}

message ValidatorVoteBody {
  // The proposal being voted on.
  uint64 proposal = 1;
  // The vote.
  governance.v1alpha1.Vote vote = 2;
  // The validator identity.
  crypto.v1alpha1.IdentityKey identity_key = 3;
  // The validator governance key.
  crypto.v1alpha1.GovernanceKey governance_key = 4;
}

message DelegatorVote {
  // The effecting data for the vote.
  DelegatorVoteBody body = 1;
  // The vote authorization signature is authorizing data.
  crypto.v1alpha1.SpendAuthSignature auth_sig = 2;
  // The vote proof is authorizing data.
  bytes proof = 3;
}

message DelegatorVoteBody {
  // The proposal being voted on.
  uint64 proposal = 1;
  // The nullifier of the input note.
  bytes nullifier = 3;
  // The randomized validating key for the spend authorization signature.
  bytes rk = 4;
  // A commitment to the value voted for "yes".
  //
  // A rational voter will place all their voting weight on one vote.
  crypto.v1alpha1.BalanceCommitment yes_balance_commitment = 5;
  // A commitment to the value voted for "no".
  //
  // A rational voter will place all their voting weight on one vote.
  crypto.v1alpha1.BalanceCommitment no_balance_commitment = 6;
  // A commitment to the value voted for "abstain".
  //
  // A rational voter will place all their voting weight on one vote.
  crypto.v1alpha1.BalanceCommitment abstain_balance_commitment = 7;
}

message ProposalDepositClaim {
  // The proposal to claim the deposit for.
  uint64 proposal = 1;
  // The expected deposit amount.
  crypto.v1alpha1.Amount deposit_amount = 2;
  // The outcome of the proposal.
  ProposalOutcome outcome = 3;
}

message DelegatorVotePlan {
    // The proposal to vote on.
    uint64 proposal = 1;
    // The vote to cast.
    governance.v1alpha1.Vote vote = 2;
    // The delegation note to prove that we can vote.
    crypto.v1alpha1.Note staked_note = 3;
    // The position of that delegation note.
    uint64 position = 4;
    // The randomizer to use for the proof of spend capability.
    bytes randomizer = 5;
}

// A vote on a proposal.
message Vote {
  // A vote.
  enum Vote {
    VOTE_UNSPECIFIED = 0;
    VOTE_ABSTAIN = 1;
    VOTE_YES = 2;
    VOTE_NO = 3;
  }

  // The vote.
  Vote vote = 1;
}

// A chain parameter that can be modified by governance.
message MutableChainParameter {
    // The identifier of the parameter, used for submitting change proposals.
    string identifier = 1;
    // A textual description of the parameter and valid values.
    string description = 2;
}

// The current state of a proposal.
message ProposalState {
    // Voting is in progress and the proposal has not yet concluded voting or been withdrawn.
    message Voting {}

    // The proposal has been withdrawn but the voting period is not yet concluded.
    message Withdrawn {
        // The reason for the withdrawal.
        string reason = 1;
    }

    // The voting period has ended, and the proposal has been assigned an outcome.
    message Finished {
        ProposalOutcome outcome = 1;
    }

    // The voting period has ended, and the original proposer has claimed their deposit.
    message Claimed {
        ProposalOutcome outcome = 1;
    }

    // The state of the proposal.
    oneof state {
        Voting voting = 2;
        Withdrawn withdrawn = 3;
        Finished finished = 4;
        Claimed claimed = 5;
    }
}

// The outcome of a concluded proposal.
message ProposalOutcome {
    // The proposal was passed.
    message Passed {}

    // The proposal did not pass.
    message Failed {
        // The proposal was withdrawn during the voting period.
        optional string withdrawn_with_reason = 1;
    }

    // The proposal did not pass, and was vetoed.
    message Vetoed {
        // The proposal was withdrawn during the voting period.
        optional string withdrawn_with_reason = 1;
    }

    oneof outcome {
        Passed passed = 1;
        Failed failed = 2;
        Vetoed vetoed = 3;
    }
}

// A list of proposal ids.
message ProposalList {
    repeated uint64 proposals = 1;
}

// A proposal to be voted upon.
message Proposal {
  // The unique identifier of the proposal.
  uint64 id = 4;

  // A short title for the proposal.
  string title = 1;

  // A natural-language description of the effect of the proposal and its justification.
  string description = 2;

  // The different kinds of proposal. Only one of these should be set.
  Signaling signaling = 5;
  Emergency emergency = 6;
  ParameterChange parameter_change = 7;
  DaoSpend dao_spend = 8;

  // A signaling proposal is meant to register a vote on-chain, but does not have an automatic
  // effect when passed.
  //
  // It optionally contains a reference to a commit which contains code to upgrade the chain.
  message Signaling {
    // The commit to be voted upon, if any is relevant.
    optional string commit = 1;
  }

  // An emergency proposal can be passed instantaneously by a 2/3 majority of validators, without
  // waiting for the voting period to expire.
  //
  // If the boolean `halt_chain` is set to `true`, then the chain will halt immediately when the
  // proposal is passed.
  message Emergency {
    // If `true`, the chain will halt immediately when the proposal is passed.
    bool halt_chain = 1;
  }

  // A parameter change proposal describes an alteration to one or more chain parameters, which
  // should take effect at a particular block height `effective_height` (which should be at least
  // the height when the proposal would be passed).
  message ParameterChange {
    // The height at which the change should take effect.
    uint64 effective_height = 1;

    // The set of changes to chain parameters.
    repeated SetParameter new_parameters = 2;

    // A single change to an individual chain parameter.
    message SetParameter {
      // The name of the parameter.
      string parameter = 1;
      // Its new value, as a string (this will be parsed as appropriate for the parameter's type).
      string value = 2;
    }
  }

  // A DAO spend proposal describes zero or more transactions to execute on behalf of the DAO, with
  // access to its funds, and zero or more scheduled transactions from previous passed proposals to
  // cancel.
  message DaoSpend {
    // The sequence of transactions to schedule for execution.
    repeated ScheduleTransaction schedule_transactions = 1;

    // A sequence of previously-scheduled transactions to cancel before they are executed.
    repeated CancelTransaction cancel_transactions = 2;

    // A transaction to be executed as a consequence of this proposal.
    //
    // It is permissible for there to be duplicate transactions scheduled for a given height; they
    // will both be executed.
    message ScheduleTransaction {
      // The height at which the transaction should be executed.
      uint64 execute_at_height = 1;
      // The transaction to be executed.
      google.protobuf.Any transaction = 2;
    }

    // A transaction to be canceled as a consequence of this proposal.
    //
    // If there are multiple duplicate transactions at the height, this cancels only the first.
    // To cancel more of them, specify duplicate cancellations.
    message CancelTransaction {
      // The height for which the transaction was scheduled.
      uint64 scheduled_at_height = 1;
      // The auth hash of the transaction to cancel.
      crypto.v1alpha1.EffectHash effect_hash = 2;
    }
  }
}